--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,5 @@ django-filter==21.1
 python-dotenv==0.19.2
 django-colorfield==0.5.0 # run collectstatic
 pillow==8.4.0
+djoser==2.1.0
+djangorestframework_simplejwt==4.8.0
