--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,5 @@ django-colorfield==0.5.0 # run collectstatic
 pillow==8.4.0
 djoser==2.1.0
 djangorestframework_simplejwt==4.8.0
+psycopg2-binary
+python-dotenv
