--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -22,9 +22,9 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
-      - .env
+      - ../.env
   back:
-    image: hash466/foo:latest
+    image: hash466/foodgram:latest
     restart: always
     volumes:
       - static_value:/code/static/
@@ -32,7 +32,7 @@ services:
     depends_on:
       - db
     env_file:
-      - .env
+      - ../.env
 
 volumes:
   postgres_data:
