--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,8 @@
-FROM python:slim
+FROM python:3-slim
 WORKDIR /app
 COPY requirements.txt .
 RUN python3 -m pip install --upgrade pip && \
     pip install -r requirements.txt
 COPY foodgram/. .
-CMD python3 manage.py collectstatic --no-input && \
-    gunicorn api_yamdb.wsgi:application --bind 0.0.0.0:8000
+# CMD gunicorn api_yamdb.wsgi:application --bind 0.0.0.0:8000
+CMD python3 manage.py runserver 0.0.0.0:8000
