--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.3'
 
 services:
-    db:
+  db:
     image: postgres:latest
     volumes:
       - postgres_data:/var/lib/postgresql/data/
@@ -27,7 +27,7 @@ services:
     image: hash466/foodgram:latest
     restart: always
     volumes:
-      - static_value:/app/static/
+      - static_value:/app/static/ #----------------
       - media_value:/app/media/
     depends_on:
       - db
