--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,5 +1,19 @@
 server {
     listen 80;
+    location ~* ^/(static|media)/ {
+        root /var/www/django/;
+        try_files $uri $uri/ =404;
+        expires 1M;
+        access_log off;
+    }
+    location /api/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Proto $scheme;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        proxy_pass http://back:8000/;
+    }
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
@@ -16,11 +30,5 @@ server {
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
       root   /var/html/frontend/;
-    }
-    location /static/ {
-        root /var/html/;
-    }
-    location /media/ {
-        root /var/html/;
     }
 }
