--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,6 @@ django-colorfield==0.5.0 # run collectstatic
 pillow==8.4.0
 djoser==2.1.0
 djangorestframework_simplejwt==4.8.0
-psycopg2-binary==2.8.5
+psycopg2-binary
 python-dotenv
 gunicorn==20.0.4
