--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,18 +1,28 @@
 version: '3.3'
 
+volumes:
+  postgres_data:
+  static_value:
+  media_value:
+
 services:
+
   db:
     image: postgres:latest
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
       - ../.env
+  
   frontend:
     build:
       context: ../frontend
       dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
+    depends_on:
+      - back
+  
   nginx:
     image: nginx:1.19.3
     ports:
@@ -21,21 +31,20 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_value:/var/www/django/static:ro
+      - media_value:/var/www/django/media:ro
     depends_on:
       - back
+  
   back:
-    image: hash466/foodgram:latest
+    #image: hash466/foodgram:latest
+    build: ../backend
     restart: always
     volumes:
-      - static_value:/app/static/ #----------------
-      - media_value:/app/media/
+      - static_value:/app/static:rw
+      - media_value:/app/media:rw
+      - ../backend/foodgram:/app # <-----------------------------------
     depends_on:
       - db
     env_file:
       - ../.env
-
-volumes:
-  postgres_data:
-  static_value:
-  media_value:
-
