--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,10 +1,18 @@
 server {
     listen 80;
-    location ~* ^/(static|media)/ {
-        root /var/www/django/;
+    # location ~* ^/(static|media)/ {
+    #     root /var/www/django/;
+    #     try_files $uri $uri/ =404;
+    #     expires 1M;
+    #     access_log off;
+    # }
+    location /static/admin/ {
+        root /var/www/django/static/;
         try_files $uri $uri/ =404;
-        expires 1M;
-        access_log off;
+    }
+    location /media/ {
+        root /var/www/django/media/;
+        try_files $uri $uri/ =404;
     }
     location /api/docs/ {
         root /usr/share/nginx/html;
@@ -15,8 +23,14 @@ server {
         proxy_set_header        X-Forwarded-Proto $scheme;
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-
         proxy_pass http://back:8000/;
+    }
+    location /admin/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Proto $scheme;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_pass http://back:8000/admin/;
     }
     location / {
         root /usr/share/nginx/html;
@@ -31,4 +45,5 @@ server {
     location = /50x.html {
       root   /var/html/frontend/;
     }
+    server_tokens off;
 }
