--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -23,14 +23,14 @@ server {
         proxy_set_header        X-Forwarded-Proto $scheme;
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_pass http://back:8000/;
+        proxy_pass http://back:8000;
     }
     location /admin/ {
         proxy_set_header        Host $host;
         proxy_set_header        X-Forwarded-Proto $scheme;
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_pass http://back:8000/admin/;
+        proxy_pass http://back:8000/admin;
     }
     location / {
         root /usr/share/nginx/html;
