--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,18 +1,11 @@
 server {
     listen 80;
-    # location ~* ^/(static|media)/ {
-    #     root /var/www/django/;
-    #     try_files $uri $uri/ =404;
-    #     expires 1M;
-    #     access_log off;
-    # }
+    server_name 127.0.0.1;
     location /static/admin/ {
-        root /var/www/django/static/;
-        try_files $uri $uri/ =404;
+        alias /var/www/django/static/admin/;
     }
     location /media/ {
-        root /var/www/django/media/;
-        try_files $uri $uri/ =404;
+        alias /var/www/django/media/;
     }
     location /api/docs/ {
         root /usr/share/nginx/html;
@@ -30,7 +23,7 @@ server {
         proxy_set_header        X-Forwarded-Proto $scheme;
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_pass http://back:8000/admin;
+        proxy_pass http://back:8000/admin/;
     }
     location / {
         root /usr/share/nginx/html;
