--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 127.0.0.1;
+    server_name practicum.tech;
     location /static/admin/ {
         alias /var/www/django/static/admin/;
     }
